src/renderer/src/assets/main.css
@import "tailwindcss";

@theme {
  --color-ui-dark-100: #101010;
  --color-ui-dark-150: #151515;
  --color-ui-dark-200: #020202;
  --color-ui-gray-100: #c8c8c8;
  --color-ui-gray-200: #707070;
}

::-webkit-scrollbar { width: 4px; }
::-webkit-scrollbar-track { background: transparent; }
::-webkit-scrollbar-thumb { background-color: #2e2e2e; border-radius: 1px; background-clip: content-box; }
::-webkit-scrollbar-thumb:hover { background-color: #2e2e2e; }


dialog[open] {
  scale: 1;
  transition: scale .3s ease-in-out;

  @starting-style { scale: 0; }
}

dialog {
  transition: scale .3s ease, display .3s ease allow-discrete;
  scale: 0
}

audio { display: none; }

/* * { outline: 1px solid red; } */

